# dlsym

./: LICENSE.txt  README.rst  pyproject.toml  setup.py  setupext.py  test_dlsym.py
.github/workflows/: build.yml
lib/dlsym/: __init__.py
